# yay-sys-tray

./: .gitignore  LICENSE  PLAN.md  README.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  preview.html  pyproject.toml  release.sh  vite.config.ts
.github/: release.yml
.github/workflows/: aur-git.yml  aur.yml  build.yml
aur/: .SRCINFO  PKGBUILD  build.sh  yay-sys-tray-git.install
aur/git/: PKGBUILD
python-src/: pyproject.toml
python-src/yay_sys_tray/: __init__.py  __main__.py  checker.py  dialogs.py  icons.py  tailscale.py
resources/: yay-sys-tray.desktop  yay-sys-tray.service
src/: App.svelte  app.css  preview.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: checker.rs  commands.rs  config.rs  icons.rs  lib.rs  main.rs  system.rs  tailscale.rs  terminal.rs  tray.rs
src/lib/: ipc.ts  types.ts
src/lib/components/: AboutDialog.svelte  DependencyTree.svelte  DurationPicker.svelte  OverflowMenu.svelte  RemoveMenu.svelte  ResizeHandles.svelte  Reticle.svelte  Segmented.svelte  SettingsDialog.svelte  SplitButton.svelte  TagPillSelector.svelte  ToggleSwitch.svelte  UpdateCard.svelte  UpdatesDialog.svelte  VersionDiff.svelte  WindowControls.svelte
src/yay_sys_tray/: __init__.py  app.py  checker.py  config.py  dialogs.py  icons.py  tailscale.py
src/yay_sys_tray.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
