[package]
name = "yay-sys-tray"
version = "0.5.0"
description = "Arch Linux system tray update checker"
authors = ["skint007"]
license = "MIT"
repository = "https://github.com/skint007/yay-sys-tray"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "yay_sys_tray_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
tauri-plugin-log = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "time", "sync", "fs", "macros"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
which = "7"
log = "0.4"
resvg = "0.45"
